add link to reddit

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,10 +1,13 @@
 <div class="social-media-list">
+
   {%- if site.github_username -%}<a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a>{%- endif -%}
 
   {%- if site.youtube_username -%}<a href="https://youtube.com/{{ site.youtube_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#youtube' | relative_url }}"></use></svg></a>{%- endif -%}
-  
-  {%- if site.google_group -%}<a href="https://groups.google.com/forum/#!forum/{{ site.google_group | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#googleplus' | relative_url }}"></use></svg></a>{%- endif -%}
 
   {%- if site.twitter_username -%}<a href="https://twitter.com/{{ site.twitter_username | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use></svg></a>{%- endif -%}
+
+{%- if site.reddit -%}<a href="https://reddit.com/r/{{ site.reddit | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#reddit' | relative_url }}"></use></svg></a>{%- endif -%}
+
+{%- if site.google_group -%}<a href="https://groups.google.com/forum/#!forum/{{ site.google_group | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#usergroup' | relative_url }}"></use></svg></a>{%- endif -%}
 
 </div>
