--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,30 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
+
+  <title>{{site.title | escape}}</title>
+
+  {% comment %} If not a podcast, use the featuredImage in a layout {% endcomment %}
+  {%- if page.featuredImage -%}
+    {%- assign card-filename = page.featuredImage | absolute_url -%}
+  {%- endif -%}
+
+  {% comment %} Display a default featured image if no other exists {% endcomment %}
+  {%- if page.layout != "podcast-post" and page.featuredImage == nil -%}
+    {%- assign card-filename = site.data.configs.defaultFeaturedImage | absolute_url -%}
+  {%- endif -%}
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@EmbeddedGo" />
+  <meta name="twitter:title" content="{{- page.title -}}">
+  <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
+  <meta property="og:image" content="{{ site.url }}/{{ page.image }}">
+  <meta property="og:description" content="{{- page.title -}}"/>
+  {% comment %} end seo {% endcomment %}
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
-  {%- include custom-head.html -%}
 </head>
